feat: generic pagination